@@ -84,6 +84,15 @@ public final class ProxyFactory
     public int
     checkRetryAfterException(Ice.LocalException ex, int cnt)
     {
+	//
+	// We don't retry *NotExistException, which are all derived from
+	// RequestFailedException.
+	//
+	if(ex instanceof Ice.RequestFailedException)
+	{
+	    throw ex;
+	}
+
 	++cnt;
 
         TraceLevels traceLevels = _instance.traceLevels();
