@@ -1,6 +1,10 @@
 Changes since version 1.3.0
 ---------------------------
 
+- Ice does now not retry operation calls on RequestFailedException
+  anymore. (ObjectNotExistException, OperationNotExistException, and
+  FacetNotExistException are derived from RequestFailedException.)
+
 - Fixed a bug with certain chache objects not being destroyed when
   connections are closed.
 
